<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.retrofitgithubapi.controller.DetailActivity">

    <ImageView
        android:id="@+id/imageview_detail_avatar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/textview_detail_headerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageview_detail_avatar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/username_header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_detail_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_detail_headerUsername"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_detail_headerLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_detail_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/link_header"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_detail_githublink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_detail_headerLink"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/github_link"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_detail_followers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_detail_githublink"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/followers"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_detail_following"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_detail_followers"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/following"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>